--- a/ChoreManager/app/src/main/res/layout/activity_specific_chore.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_specific_chore.xml
@@ -218,32 +218,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@color/colorPrimaryDark"
+                        android:onClick="editChoreOnClick"
                         android:text="@string/edit_chore_button"
-                        android:textColor="@android:color/white" />
-
-                    <Button
-                        android:id="@+id/unassignButton"
-                        style="?android:attr/buttonBarButtonStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="2dp"
-                        android:layout_marginStart="2dp"
-                        android:layout_weight="1"
-                        android:background="@color/colorPrimaryDark"
-                        android:text="@string/unassignButton"
-                        android:textColor="@android:color/white" />
-
-                    <Button
-                        android:id="@+id/reassignButton"
-                        style="?android:attr/buttonBarButtonStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="2dp"
-                        android:layout_marginStart="2dp"
-                        android:layout_weight="1"
-                        android:background="@color/colorPrimaryDark"
-                        android:onClick="onClickReAssign"
-                        android:text="@string/reassignButton"
                         android:textColor="@android:color/white" />
 
                 </LinearLayout>
