blessed project with my inhuman coding ability (added filters for chore types)

--- a/ChoreManager/app/src/main/res/menu/filter_popup.xml
+++ b/ChoreManager/app/src/main/res/menu/filter_popup.xml
@@ -15,4 +15,13 @@
         <item
             android:id="@+id/allChores"
             android:title="All Chores" />
+        <item
+            android:id="@+id/misc"
+            android:title="Misc Chores" />
+        <item
+            android:id="@+id/cook"
+            android:title="Cooking Chores" />
+        <item
+            android:id="@+id/clean"
+            android:title="Cleaning Chores" />
 </menu>
