--- a/ChoreManager/app/src/main/res/layout/user_layout.xml
+++ b/ChoreManager/app/src/main/res/layout/user_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="2">
@@ -37,6 +38,30 @@
             android:gravity="center_horizontal"
             android:text="@string/roleName"
             android:textColor="@android:color/darker_gray" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/pointsTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:text="Total Points:  "
+                android:textColor="@android:color/darker_gray" />
+
+            <TextView
+                android:id="@+id/actualPointsTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:textColor="@android:color/darker_gray" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
