--- a/ChoreManager/app/src/main/res/layout/activity_settings.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_settings.xml
@@ -6,6 +6,60 @@
     android:layout_height="match_parent"
     tools:context="com.example.alan.peter.bilal.sam.choremanager.SettingsActivity">
 
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="60dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:id="@+id/linearLayout4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/resetButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/changeThemeText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/changeTheme"
+                android:textSize="25sp" />
+
+            <Spinner
+                android:id="@+id/themeSpinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/switchUserText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/switchUser"
+                android:textSize="25sp" />
+
+            <Spinner
+                android:id="@+id/userSpinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+    </ScrollView>
+
     <Button
         android:id="@+id/resetButton"
         android:layout_width="0dp"
@@ -21,43 +75,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/resetButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/changeThemeText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/changeTheme"
-            android:textSize="25sp" />
-
-        <Spinner
-            android:id="@+id/themeSpinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/switchUserText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/switchUser"
-            android:textSize="25sp" />
-
-        <Spinner
-            android:id="@+id/userSpinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
