Minor Colour Fixes

--- a/ChoreManager/app/src/main/res/layout/activity_specific_chore.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_specific_chore.xml
@@ -37,11 +37,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/colorAccent"
+                android:background="@color/colorPrimary"
                 android:gravity="center"
                 android:text="@string/string_placeholder_chore_name"
                 android:textColor="@color/secondaryTextColor"
-                android:textSize="20sp"
+                android:textSize="25sp"
                 android:textStyle="normal" />
 
             <LinearLayout
@@ -72,7 +72,7 @@
                 android:id="@+id/descriptionTitleText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/secondaryLightColor"
+                android:background="@color/colorAccent"
                 android:gravity="center"
                 android:text="@string/descriptionTitle"
                 android:textColor="@color/secondaryTextColor"
@@ -94,7 +94,7 @@
                 android:id="@+id/noteViewText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/secondaryLightColor"
+                android:background="@color/colorAccent"
                 android:gravity="center"
                 android:text="@string/notes"
                 android:textColor="@color/secondaryTextColor"
@@ -117,7 +117,7 @@
                 android:id="@+id/descriptionTitleText2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/secondaryLightColor"
+                android:background="@color/colorAccent"
                 android:gravity="center"
                 android:text="@string/string_assigned_resources"
                 android:textColor="@color/secondaryTextColor"
@@ -175,7 +175,7 @@
                 android:id="@+id/linearLayout10"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="2dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
                 android:orientation="vertical"
@@ -190,7 +190,7 @@
                     android:id="@+id/parentCommandText2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/secondaryLightColor"
+                    android:background="@color/colorPrimary"
                     android:gravity="center"
                     android:text="@string/parentCommandTitle"
                     android:textColor="@color/secondaryTextColor"
