Delete User Button Implemented, Added SetVisiblity to GONE if not Admin to that button and the editschore button

--- a/ChoreManager/app/src/main/res/layout/activity_specific_chore.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_specific_chore.xml
@@ -146,7 +146,7 @@
                     android:background="@color/colorPrimaryDark"
                     android:onClick="onClickIncompleteChore"
                     android:text="@string/mark_incomplete_button"
-                    android:textColor="@color/primaryLightColor" />
+                    android:textColor="@android:color/white" />
 
                 <Button
                     android:id="@+id/completeButton"
