Added Swithc User capabilities with passwordchecks

--- a/ChoreManager/app/src/main/res/layout/activity_new_user.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_new_user.xml
@@ -92,7 +92,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight=".5"
                     android:ems="10"
-                    android:inputType="textPersonName" />
+                    android:inputType="textVisiblePassword" />
             </LinearLayout>
 
             <LinearLayout
