Finished implementation of Shopping list

--- a/ChoreManager/app/src/main/res/layout/itemclick_layout.xml
+++ b/ChoreManager/app/src/main/res/layout/itemclick_layout.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Are you sure? This cannot be undone."
+        android:text="What would you like to do with this item?"
         android:textSize="20sp" />
 
 
@@ -26,6 +26,21 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:weightSum="2">
+
+        <Button
+            android:id="@+id/purchaseButton"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginLeft="2.5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginStart="2.5dp"
+            android:layout_weight=".99"
+            android:background="@color/colorPrimaryDark"
+            android:text="Purchase"
+            android:textColor="@android:color/white" />
 
         <Button
             android:id="@+id/cancelButton"
@@ -43,7 +58,7 @@
             android:textColor="@android:color/white" />
 
         <Button
-            android:id="@+id/confirmButton"
+            android:id="@+id/deleteButton"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -54,8 +69,9 @@
             android:layout_marginStart="2.5dp"
             android:layout_weight=".99"
             android:background="@color/colorPrimaryDark"
-            android:text="@string/string_confirm"
+            android:text="Delete"
             android:textColor="@android:color/white" />
+
     </LinearLayout>
 
 </LinearLayout>
