Added Log out Button

--- a/ChoreManager/app/src/main/res/layout/activity_settings.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_settings.xml
@@ -7,6 +7,21 @@
     tools:context="com.example.alan.peter.bilal.sam.choremanager.SettingsActivity">
 
     <Button
+        android:id="@+id/logOutButton"
+        android:layout_width="255dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="logOutOnClick"
+        android:text="@string/string_log_out"
+        app:layout_constraintBottom_toTopOf="@+id/resetButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:id="@+id/resetButton"
         android:layout_width="0dp"
         android:layout_height="48dp"
