Adding signout functionality for solo accounts, made minor changes to the XML

--- a/ChoreManager/app/src/main/res/layout/activity_settings.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_settings.xml
@@ -14,8 +14,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@color/colorPrimaryDark"
         android:onClick="logOutOnClick"
         android:text="@string/string_log_out"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/resetButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
