--- a/ChoreManager/app/src/main/res/layout/activity_specific_chore.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_specific_chore.xml
@@ -12,6 +12,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +25,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="2dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
             app:layout_constraintEnd_toEndOf="parent"
@@ -216,7 +218,6 @@
                         style="?android:attr/buttonBarButtonStyle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:background="@color/colorPrimaryDark"
                         android:onClick="editChoreOnClick"
                         android:text="@string/edit_chore_button"
