--- a/ChoreManager/app/src/main/res/layout/activity_user_menu.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_user_menu.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.alan.peter.bilal.sam.choremanager.UserMenu"
+    tools:context="com.example.alan.peter.bilal.sam.choremanager.Activities.UserMenu"
     tools:layout_editor_absoluteY="81dp">
 
     <android.support.v4.widget.SwipeRefreshLayout
