--- a/ChoreManager/app/src/main/res/layout/activity_app_login.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_app_login.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.alan.peter.bilal.sam.choremanager.AppLoginActivity">
+    tools:context="com.example.alan.peter.bilal.sam.choremanager.Activities.AppLoginActivity">
 
     <!-- Login progress -->
 
