--- a/ChoreManager/app/src/main/res/layout/activity_assigned_resources.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_assigned_resources.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.alan.peter.bilal.sam.choremanager.AssignedResourcesActivity">
+    tools:context="com.example.alan.peter.bilal.sam.choremanager.Activities.AssignedResourcesActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout5"
