--- a/ChoreManager/app/src/main/res/layout/activity_choose_profile_picture.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_choose_profile_picture.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primaryLightColor"
-    tools:context="com.example.alan.peter.bilal.sam.choremanager.ChooseProfilePictureActivity">
+    tools:context="com.example.alan.peter.bilal.sam.choremanager.Activities.ChooseProfilePictureActivity">
 
     <LinearLayout
         android:layout_width="376dp"
