--- a/ChoreManager/app/src/main/res/layout/activity_special_admin_user_creation.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_special_admin_user_creation.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.alan.peter.bilal.sam.choremanager.SpecialAdminUserCreationActivity">
+    tools:context="com.example.alan.peter.bilal.sam.choremanager.Activities.SpecialAdminUserCreationActivity">
 
     <ScrollView
         android:layout_width="0dp"
